@@ -3,6 +3,7 @@ DocImport 1.0.7
 + gh-6 Added sh404SEF plugin to create SEF url with that component
 ~ Improved back-end display in Joomla! 3
 ~ AJAX ordering now shows the ordering in a textbox, to faciliate ordering without much frustration in Joomla! 3
+~ Now using the built-in Joomla! extensions updater instead of Live Update to deliver updates
 # [MEDIUM] Fatal error com_finder indexer
 # [MEDIUM] The plugins didn't install
 # [LOW] Very rarely an empty article would be generated every time you tried processing the DocBook XML files
